en.yml includes recurring_select options

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,3 +5,10 @@ en:
         menu: "Restore"
       trigger_email:
         menu: "Trigger Email Process (Test)"
+  recurring_select:
+    not_recurring: "One time (not recurring)"
+    change_schedule: "Change schedule..."
+    set_schedule: "Set schedule..."
+    new_custom_schedule: "New custom schedule..."
+    custom_schedule: "Custom schedule..."
+    or: or
